--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <pre class="output">JASON KIM</pre>
                 <pre class="output location-time">NYC <span id="current-time"></span></pre>
             </div>
-            <span>jasonkim.xyz ~ % ls -l</span>
+            <span class="command"> ls -l</span>
             <ul id="directory">
                 <li><a href="#" class="file" data-file="PROFILE"><span class="file-name"><span class="file-name-text">PROFILE</span><span class="file-name-ext">TXT</span></span></a></li>
                 <li><a href="#" class="file" data-file="HISTORY"><span class="file-name"><span class="file-name-text">HISTORY</span><span class="file-name-ext">TXT</span></span></a></li>
