--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Jason Kim" />
     <meta property="og:description" content="Portfolio website" />
-    <meta property="og:image" content="Uhttps://github.com/miknosaj/miknosaj.github.io/blob/master/images/thumbnail.png" />
-    <meta property="og:url" content="jasonkim.xyz" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/miknosaj/miknosaj.github.io/master/images/thumbnail.png" />
+    <meta property="og:url" content="https://jasonkim.xyz" />
     <title>Jason Kim</title>
     <link rel="stylesheet" href="styles.css">
     <link
