update links to open new tabs

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="divider"></div>
         <div class="links">
           <a href="https://www.jasonkim.xyz/portfolio" target="_blank" rel="noopener noreferrer" class="file">Portfolio</a>
-          <a href="files/Jason-Kim_Resume2025.pdf">Résumé</a>
-          <a href="https://www.linkedin.com/in/miknosaj">Linkedin</a>
+          <a href="files/Jason-Kim_Resume2025.pdf" target="_blank">Résumé</a>
+          <a href="https://www.linkedin.com/in/miknosaj" target="_blank">Linkedin</a>
         </div>
         <div class="divider"></div>
       </div>
