--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
     const getPos = (e) => {
         const rect = canvas.getBoundingClientRect();
         if (e.touches) {
-        return {
-            x: e.touches[0].clientX - rect.left,
-            y: e.touches[0].clientY - rect.top
-        };
+            return {
+                x: e.touches[0].clientX - rect.left,
+                y: e.touches[0].clientY - rect.top - 3
+            };
         }
         return {
-        x: e.clientX - rect.left,
-        y: e.clientY - rect.top
+            x: e.clientX - rect.left,
+            y: e.clientY - rect.top - 3
         };
     };
 
