--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="divider"></div>
         <div class="links">
           <a href="https://www.jasonkim.xyz/portfolio" target="_blank" rel="noopener noreferrer" class="file">Portfolio</a>
-          <a href="files/Jason-Kim_Resume2025.pdf" target="_blank">Résumé</a>
+          <a href="https://drive.google.com/file/d/1WLN4nKYi-rmp1CRCdRoklMDsdJbb3Ueb/view?usp=drive_link" target="_blank">Résumé</a>
           <a href="https://www.linkedin.com/in/miknosaj" target="_blank">LinkedIn</a>
           <a href="https://www.instagram.com/kim.json/" target="_blank">IG</a>
         </div>
